--- a/SourceCode/2023/Dec2023/Preti/Task5/Main.xaml
+++ b/SourceCode/2023/Dec2023/Preti/Task5/Main.xaml
@@ -112,7 +112,7 @@
             <OutArgument x:TypeArguments="ui:GenericValue">[Int_Integer]</OutArgument>
           </Assign.To>
           <Assign.Value>
-            <InArgument x:TypeArguments="x:Object">[5]</InArgument>
+            <InArgument x:TypeArguments="ui:GenericValue">[3]</InArgument>
           </Assign.Value>
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
